syntax = "proto3";

package user;

option go_package = "github.com/krixlion/dev_forum-user/pkg/grpc/v1;pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service UserService {
    rpc Create(CreateUserRequest) returns (CreateUserResponse) {}
    
    rpc Update(UpdateUserRequest) returns (google.protobuf.Empty) {}
    
    rpc Delete(DeleteUserRequest) returns (google.protobuf.Empty) {}
    
    rpc Get(GetUserRequest) returns (GetUserResponse) {}
    
    rpc GetSecret(GetUserSecretRequest) returns (GetUserSecretResponse) {}
    
    rpc GetStream(GetUsersRequest) returns (stream User) {}
}

message User {
    string id = 1;
    string name = 2;
    string email = 4;
    string password = 3;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    string id = 1;
}


message UpdateUserRequest {
    User user = 1;
}


message DeleteUserRequest {
    string id = 1;
}


message GetUserSecretRequest {
    // Access token - only auth service should be able to query this endpoint.
    string secret = 1;
    
    oneof query {
        string id = 2;
        string email = 3;
    }
}

message GetUserSecretResponse {
    User user = 1;
}


message GetUserRequest {
    string id = 1;
}

message GetUsersRequest {
    string offset = 1;
    string limit = 2;
}

message GetUserResponse {
    User user = 1;
}